correcciones en mentoria grupal

--- a/public/css/estilos.css
+++ b/public/css/estilos.css
@@ -528,8 +528,8 @@ p.card-text {margin-bottom: 2rem;}
 }
 
 #negocio-solido {
-    background-image: url(../img/new/_DSC3008.jpg);
+    background-image: url(../img/new/_DSC3003.jpg);
     background-repeat: no-repeat;
     background-size: cover;
-    background-position: center center;
+    background-position: top center;
 }
