--- a/public/css/starter.css
+++ b/public/css/starter.css
@@ -14244,16 +14244,25 @@ p.entry-date {
     background-position: center center
 }
 
+.social-group {
+    display: flex;
+    justify-content: center;
+}
+
 .btn-social-group {
-    height: 50px;
-    width: 50px;
+    height: 64px;
+    width: 64px;
     border-radius: 50%;
-    transition: all .3s
+    transition: all .3s;
+    background: #B46063;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 0.5rem;
 }
 
 .btn-social-group:hover {
-    background: #B46063;
-    transition: all .3s
+    background-color: var(--primary);
 }
 
 .form-home .form-control {
